--- a/1128/openworld(multi)_LGBM.ipynb
+++ b/1128/openworld(multi)_LGBM.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -7022,8 +7022,8 @@
     "X_val = scaler.transform(X_val)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "### 방법 0: 기본 XGBoost ###\n",
-    "print(\"=== Default XGBoost ===\")\n",
+    "### 방법 0: 기본 ###\n",
+    "print(\"=== Default LGBM ===\")\n",
     "model_default = LGBMClassifier(random_state=42, n_jobs=-1, use_label_encoder=False, eval_metric='mlogloss')\n",
     "model_default.fit(X_train, y_train)\n",
     "\n",
@@ -7040,7 +7040,7 @@
     "\n",
     "\n",
     "### 방법 1: 클래스 가중치 적용 ###\n",
-    "print(\"\\n=== XGBoost with Class Weights ===\")\n",
+    "print(\"\\n=== LGBM with Class Weights ===\")\n",
     "# 클래스 비율 계산\n",
     "class_weights = {cls: len(y_train) / (len(np.unique(y_train)) * sum(y_train == cls)) for cls in np.unique(y_train)}\n",
     "sample_weights = y_train.map(class_weights)\n",
