--- a/1128/openworld(multi)_LGBM.ipynb
+++ b/1128/openworld(multi)_LGBM.ipynb
@@ -25,13 +25,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Default XGBoost ===\n",
+      "=== Default LGBM ===\n",
       "[LightGBM] [Warning] Unknown parameter: use_label_encoder\n",
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
       "[LightGBM] [Warning] Unknown parameter: use_label_encoder\n",
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002602 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001128 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 3337\n",
       "[LightGBM] [Info] Number of data points in the train set: 13300, number of used features: 15\n",
       "[LightGBM] [Info] Start training from score -4.553877\n",
@@ -2346,12 +2347,12 @@
       "Test Accuracy: 0.7821052631578947\n",
       "Test F1 Score: 0.7822334455491399\n",
       "\n",
-      "=== XGBoost with Class Weights ===\n",
+      "=== LGBM with Class Weights ===\n",
       "[LightGBM] [Warning] Unknown parameter: use_label_encoder\n",
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
       "[LightGBM] [Warning] Unknown parameter: use_label_encoder\n",
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002440 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000733 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 3337\n",
       "[LightGBM] [Info] Number of data points in the train set: 13300, number of used features: 15\n",
@@ -4673,7 +4674,7 @@
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
       "[LightGBM] [Warning] Unknown parameter: use_label_encoder\n",
       "[LightGBM] [Warning] Unknown parameter: eval_metric\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.002721 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000722 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 3337\n",
       "[LightGBM] [Info] Number of data points in the train set: 13300, number of used features: 15\n",
@@ -7061,7 +7062,7 @@
     "\n",
     "\n",
     "### 방법 2: SMOTE를 이용한 오버샘플링 ###\n",
-    "print(\"\\n=== XGBoost with SMOTE ===\")\n",
+    "print(\"\\n=== LGBM with SMOTE ===\")\n",
     "smote = SMOTE(random_state=42)\n",
     "X_train_smote, y_train_smote = smote.fit_resample(X_train, y_train)\n",
     "\n",
